--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <p style="font-size: 20px; display: flex; justify-content: center; align-items: center;">Email: rckstr@altmails.com</p>
 <p style="font-size: 20px; display: flex; justify-content: center; align-items: center;">Discord: <a href="https://discord.gg/2Fw5sz9MQs" style="color: #FFD700;">https://discord.gg/2Fw5sz9MQs</a></p>
-<p style="font-size: 20px; display: flex; justify-content: center; align-items: center;">2024 RCKSTR x EthanDupe. All rights reserved.</p>
+<p &copy style="font-size: 20px; display: flex; justify-content: center; align-items: center;">2024 RCKSTR x EthanDupe. All rights reserved.</p>
