--- a/games.html
+++ b/games.html
@@ -66,7 +66,7 @@ div#main-content {
 </head>
 <body>
 
-<!--#include virtual="header.html" -->
+    <div id="header"></div> <!-- Placeholder for header content -->
 
 	
 	<a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a>
