--- a/games.html
+++ b/games.html
@@ -6,89 +6,89 @@
     <link rel="icon" type="image/x-icon" href="logo.ico">
     <style type="text/css" media="screen">
         * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-}
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
-body {
-    background-color: black; /*changed, old was tacky*/
-    color: #f4f4f4;
-}
+        body {
+            background-color: black;
+            color: #f4f4f4;
+        }
 
+        div#main-content {
+            padding-top: 70px;
+            text-align: center;
+            padding: 20px;
+        }
 
-div#main-content {
-    padding-top: 70px;
-    text-align: center;
-    padding: 20px;
-}
+        .button_container {
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 25px 25px;
+            background: linear-gradient(45deg, #FFD700, #000);
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            margin-bottom: 20px;
+        }
 
-.button_container {
-        color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 25px 25px; /* Increased padding at the top */
-    background: linear-gradient(45deg, #FFD700, #000);
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    margin-bottom: 20px;
-}
+        .button_navigation {
+            background-color: black;
+            border: 2px solid #FFD700;
+            padding: 15px 32px;
+            text-align: center;
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 12px;
+            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
 
-.button_navigation {
-    background-color: black; /* black background */
-    border: 2px solid #FFD700; /* Increased border size */
-    padding: 15px 32px; 
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    margin: 10px;
-    cursor: pointer;
-    border-radius: 12px;
-    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
+        .button_navigation:hover {
+            background: linear-gradient(45deg, #000, #FFD700);
+            color: white;
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
+        }
 
-.button_navigation:hover {
-    background: linear-gradient(45deg, #000, #FFD700);
-    color: white; /* Changed from font-color */
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
-}
-
-.games_container {
-	text-align:center;
-}
+        .games_container {
+            text-align:center;
+        }
     </style>
 </head>
 <body>
 
     <div id="header"></div> <!-- Placeholder for header content -->
 
-	
-	<a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a>
-    <br>
-    <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a>
-    <br>
-    <a href="./games/slope.html">Slope</a>
-    <br>
-    <a href="./games/terratorial.html">Territorial.io</a>
-    <br>
-    <a href="./games/retrobowl.html">Retro Bowl</a>
-    <br>
-    <a href="./games/cookieclicker/index.html">Cookie clicker</a> 
-	<br>
-	<a href="./games/krunker/index.html">Krunker.io</a>
-	<br>
-	<a href="./games/2048.html">2048</a>
-    <br>
-    <a href="./games/Terraria.html">Terraria</a>
-    <br>
-    <a href="./games/TerrariaMP.html">Terraria Multiplayer </a>
-	</div>
+    <div class="games_container">
+        <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
+        <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
+        <a href="./games/slope.html">Slope</a><br>
+        <a href="./games/terratorial.html">Territorial.io</a><br>
+        <a href="./games/retrobowl.html">Retro Bowl</a><br>
+        <a href="./games/cookieclicker/index.html">Cookie clicker</a><br>
+        <a href="./games/krunker/index.html">Krunker.io</a><br>
+        <a href="./games/2048.html">2048</a><br>
+        <a href="./games/Terraria.html">Terraria</a><br>
+        <a href="./games/TerrariaMP.html">Terraria Multiplayer </a><br>
+    </div>
+
     <script src="./scripts/navigation.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetch('header.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('header').innerHTML = data;
+                });
+        });
+    </script>
 </body>
 </html>
