--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
@@ -41,7 +41,7 @@
             border: 2px solid #FFD700;
             padding: 15px 32px;
             text-align: center;
-            color: white;
+            color: yellow;
             text-decoration: none;
             font-size: 18px;
             margin: 10px;
@@ -60,6 +60,13 @@
 
         .games_container {
             text-align:center;
+            margin-top: 20px;
+        }
+
+        .game_image {
+            width: 100px; /* Adjust size as needed */
+            height: 100px; /* Adjust size as needed */
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -68,15 +75,34 @@
     <div id="header"></div> <!-- Placeholder for header content -->
 
     <div class="games_container">
+        <img class="game_image" src="placeholder1.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
+
+        <img class="game_image" src="placeholder2.jpg" alt="Game Image"><br>
         <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
+
+        <img class="game_image" src="placeholder3.jpg" alt="Game Image"><br>
         <a href="./games/slope.html">Slope</a><br>
+
+        <img class="game_image" src="placeholder4.jpg" alt="Game Image"><br>
         <a href="./games/terratorial.html">Territorial.io</a><br>
+
+        <img class="game_image" src="placeholder5.jpg" alt="Game Image"><br>
         <a href="./games/retrobowl.html">Retro Bowl</a><br>
+
+        <img class="game_image" src="placeholder6.jpg" alt="Game Image"><br>
         <a href="./games/cookieclicker/index.html">Cookie clicker</a><br>
+
+        <img class="game_image" src="placeholder7.jpg" alt="Game Image"><br>
         <a href="./games/krunker/index.html">Krunker.io</a><br>
+
+        <img class="game_image" src="placeholder8.jpg" alt="Game Image"><br>
         <a href="./games/2048.html">2048</a><br>
+
+        <img class="game_image" src="placeholder9.jpg" alt="Game Image"><br>
         <a href="./games/Terraria.html">Terraria</a><br>
+
+        <img class="game_image" src="placeholder10.jpg" alt="Game Image"><br>
         <a href="./games/TerrariaMP.html">Terraria Multiplayer </a><br>
     </div>
 
