--- a/games.html
+++ b/games.html
@@ -61,6 +61,7 @@
         .games_container {
             text-align:center;
             margin-top: 20px;
+            color: yellow;
         }
 
         .game_image {
