make links yellow

--- a/games.html
+++ b/games.html
@@ -58,10 +58,11 @@
             box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
         }
 
-        .games_container {
+        .games_container a {
             text-align:center;
             margin-top: 20px;
             color: yellow;
+            text-decoration: none;
         }
 
         .game_image {
