--- a/games.html
+++ b/games.html
@@ -62,8 +62,6 @@
         .games_container {
             text-align: center;
             margin-top: 20px;
-            max-height: 500px; /* Limit the height of the container */
-            overflow-y: auto; /* Enable vertical scrolling */
         }
 
         .game_image {
@@ -81,8 +79,32 @@
         <img class="game_image" src="placeholder1.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
-        <!-- Add more content here to exceed the container height -->
+        <img class="game_image" src="placeholder2.jpg" alt="Game Image"><br>
+        <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
 
+        <img class="game_image" src="placeholder3.jpg" alt="Game Image"><br>
+        <a href="./games/slope.html">Slope</a><br>
+
+        <img class="game_image" src="placeholder4.jpg" alt="Game Image"><br>
+        <a href="./games/terratorial.html">Territorial.io</a><br>
+
+        <img class="game_image" src="placeholder5.jpg" alt="Game Image"><br>
+        <a href="./games/retrobowl.html">Retro Bowl</a><br>
+
+        <img class="game_image" src="placeholder6.jpg" alt="Game Image"><br>
+        <a href="./games/cookieclicker/index.html">Cookie clicker</a><br>
+
+        <img class="game_image" src="placeholder7.jpg" alt="Game Image"><br>
+        <a href="./games/krunker/index.html">Krunker.io</a><br>
+
+        <img class="game_image" src="placeholder8.jpg" alt="Game Image"><br>
+        <a href="./games/2048.html">2048</a><br>
+
+        <img class="game_image" src="placeholder9.jpg" alt="Game Image"><br>
+        <a href="./games/Terraria.html">Terraria</a><br>
+
+        <img class="game_image" src="placeholder10.jpg" alt="Game Image"><br>
+        <a href="./games/TerrariaMP.html">Terraria Multiplayer </a><br>
     </div>
 
     <script src="./scripts/navigation.js"></script>
