--- a/games.html
+++ b/games.html
@@ -75,7 +75,7 @@
 
     <div id="header"></div> <!-- Placeholder for header content -->
 
-    <div class="games_container">
+    <div class="games_container" style=color:>
         <img class="game_image" src="placeholder1.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
