--- a/games.html
+++ b/games.html
@@ -64,6 +64,10 @@
             margin-top: 20px;
         }
 
+        .games_container a {
+            color: yellow; /* Make the links yellow */
+        }
+
         .game_image {
             width: 100px; /* Adjust size as needed */
             height: 100px; /* Adjust size as needed */
