--- a/games.html
+++ b/games.html
@@ -92,7 +92,7 @@
         <img class="game_image" src="placeholder4.jpg" alt="Game Image"><br>
         <a href="./games/terratorial.html">Territorial.io</a><br>
 
-        <img class="game_image" src="placeholder5.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/ee9ca3764ef4289a48a1ebf457ef605441ed1f35a0f2eb12707a70d609e53686.avif" alt="Game Image"><br>
         <a href="./games/retrobowl.html">Retro Bowl</a><br>
 
         <img class="game_image" src="placeholder6.jpg" alt="Game Image"><br>
