--- a/games.html
+++ b/games.html
@@ -86,7 +86,7 @@
         <img class="game_image" src="placeholder2.jpg" alt="Game Image"><br>
         <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
 
-        <img class="game_image" src="placeholder3.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/slope.jpeg" alt="Game Image"><br>
         <a href="./games/slope.html">Slope</a><br>
 
         <img class="game_image" src="placeholder4.jpg" alt="Game Image"><br>
