--- a/games.html
+++ b/games.html
@@ -80,7 +80,7 @@
     <div id="header"></div> <!-- Placeholder for header content -->
 
     <div class="games_container" style="color:yellow;">
-        <img class="game_image" src="placeholder1.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
         <img class="game_image" src="placeholder2.jpg" alt="Game Image"><br>
