--- a/about.html
+++ b/about.html
@@ -88,18 +88,11 @@ div#main-content {
             text-decoration: underline;
         }
     </style>
+	    <script src="loadContent.js" defer></script>
+    	    <script src="./scripts/navigation.js" defer></script>
 </head>
 <body>
-  
-<div class='button_container'>
-	<button onclick="goto('games')" class='button_navigation'>Games</button>
-        <button onclick='goto("home")' class='button_navigation'>Home</button>
-        <button onclick='goto("star")' class='button_navigation'>Star</button>
-        <button onclick='goto("about")' class='button_navigation'>About</button>
-        <button onclick='goto("news")' class='button_navigation'>News</button>
-        <button onclick='goto("discord")' class='button_navigation'>Discord</button>
-	<button onclick='goto("ethandupe")' class='button_navigation'>Ethandupe</button>
-</div>
+<div id="header"></div> <!-- Placeholder for header content -->
         <div class="intro_container">
             <h1>Welcome to RCKSR x Ethandupe, an open-source project made by USLdesigns, Ethandupe, and theskid22</h1>
         </div>
@@ -117,6 +110,5 @@ div#main-content {
 			Aiding: (vk6) (not affilated with this project) Creating dextensify
 			<br>
 		</div>
-	<script src="./scripts/navigation.js"></script>
 </body>
 </html>
