--- a/news.html
+++ b/news.html
@@ -70,6 +70,7 @@ div#main-content {
 <body>
 <script src="loadContent.js" defer></script>
 <script src="./scripts/navigation.js" defer></script>
+<div id="header"></div> <!-- Placeholder for header content -->
 <div class="news_container">
 	Update log: 
 	<br>
