--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     <script src="./scripts/navigation.js" defer></script>
 </head>
 <body>
+        <script src="loadContent.js" defer></script>
+    <script src="./scripts/navigation.js" defer></script>
     <div id="header"></div> <!-- Placeholder for header content -->
 
     <div class="intro_container" style="margin-bottom: 15px;" align="center">
