--- a/news.html
+++ b/news.html
@@ -69,8 +69,8 @@ div#main-content {
 </head>
 <body>
 <div id="header"></div> <!-- Placeholder for header content -->
-<script src="loadContent.js" defer></script>
-<script src="./scripts/navigation.js" defer></script>
+<script src="loadContent.js"></script>
+<script src="./scripts/navigation.js"></script>
 <div class="news_container">
 	Update log: 
 	<br>
