--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
 </head>
 <body>
-        <script src="loadContent.js" defer></script>
-    <script src="./scripts/navigation.js" defer></script>
     <div id="header"></div> <!-- Placeholder for header content -->
+    <script src="loadContent.js"></script>
+    <script src="./scripts/navigation.js"></script>
 
     <div class="intro_container" style="margin-bottom: 15px;" align="center">
         <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1>
