--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<body>
+     <div id="header"></div> <!-- Placeholder for header content -->
+    <script src="loadContent.js"></script>
+    <script src="./scripts/navigation.js"></script>
+</body>
 <head>
     <title>RCKSTR x EthanDupe</title>
     <link rel="icon" type="image/x-icon" href="logo.ico">
@@ -73,10 +78,7 @@
 
 </head>
 <body>
-    <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="loadContent.js"></script>
-    <script src="./scripts/navigation.js"></script>
-
+   
     <div class="intro_container" style="margin-bottom: 15px;" align="center">
         <h1 style="font-size: 28px;" align="center;">Welcome to RCKSTR x Ethandupe</h1>
     </div>
