--- a/games.html
+++ b/games.html
@@ -83,7 +83,7 @@
         <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
-        <img class="game_image" src="placeholder2.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>
         <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
 
         <img class="game_image" src="./static/slope.jpeg" alt="Game Image"><br>
@@ -95,13 +95,13 @@
         <img class="game_image" src="./static/ee9ca3764ef4289a48a1ebf457ef605441ed1f35a0f2eb12707a70d609e53686.avif" alt="Game Image"><br>
         <a href="./games/retrobowl.html">Retro Bowl</a><br>
 
-        <img class="game_image" src="placeholder6.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/cookieclicker.jpeg" alt="Game Image"><br>
         <a href="./games/cookieclicker/index.html">Cookie clicker</a><br>
 
-        <img class="game_image" src="placeholder7.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/krunker.png" alt="Game Image"><br>
         <a href="./games/krunker/index.html">Krunker.io</a><br>
 
-        <img class="game_image" src="placeholder8.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/2048.jpeg" alt="Game Image"><br>
         <a href="./games/2048.html">2048</a><br>
 
         <img class="game_image" src="placeholder9.jpg" alt="Game Image"><br>
