--- a/games.html
+++ b/games.html
@@ -104,10 +104,10 @@
         <img class="game_image" src="./static/2048.jpeg" alt="Game Image"><br>
         <a href="./games/2048.html">2048</a><br>
 
-        <img class="game_image" src="placeholder9.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/teraria.jpg" alt="Game Image"><br>
         <a href="./games/Terraria.html">Terraria</a><br>
 
-        <img class="game_image" src="placeholder10.jpg" alt="Game Image"><br>
+        <img class="game_image" src="./static/teraria.jpg" alt="Game Image"><br>
         <a href="./games/TerrariaMP.html">Terraria Multiplayer </a><br>
     </div>
 
