--- a/games.html
+++ b/games.html
@@ -121,5 +121,7 @@
                 });
         });
     </script>
+    
+    <div id="footer"></div> <!-- Placeholder for footer content -->
 </body>
 </html>
