--- a/games.html
+++ b/games.html
@@ -71,7 +71,7 @@
         .game_image {
             width: 100px; /* Adjust size as needed */
             height: 100px; /* Adjust size as needed */
-            margin-bottom: 10px;
+            margin-top: 10px;
         }
     </style>
 </head>
