--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
 
         html, body {
             height: 100%; /* Ensure html and body take full height */
-            overflow-y: auto; /* Enable vertical scrolling */
+            overflow-y: scroll; /* Enable vertical scrolling */
         }
 
         body {
