--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
 
         html, body {
             height: 100%; /* Ensure html and body take full height */
-            overflow-y: scroll; /* Enable vertical scrolling */
+            overflow: auto; /* Enable scrolling */
         }
 
         body {
@@ -22,7 +22,7 @@
             color: #f4f4f4;
         }
 
-        div#main-content {
+        #main-content {
             padding-top: 70px;
             text-align: center;
             padding: 20px;
