--- a/games.html
+++ b/games.html
@@ -84,20 +84,20 @@
     <div id="header"></div> <!-- Placeholder for header content -->
 
     <div class="games_container" style="color:yellow;">
-        <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image">    
-        <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a>  
+        <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>
+        <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
-        <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image">   
-        <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a>   
+        <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>   
+        <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
 
-        <img class="game_image" src="./static/slope.jpeg" alt="Game Image">   
-        <a href="./games/slope.html">Slope</a>   
+        <img class="game_image" src="./static/slope.jpeg" alt="Game Image"><br>   
+        <a href="./games/slope.html">Slope</a><br>   
 
-        <img class="game_image" src="./static/teritory.jpg" alt="Game Image">   
-        <a href="./games/terratorial.html">Territorial.io</a>    
+        <img class="game_image" src="./static/teritory.jpg" alt="Game Image"><br>   
+        <a href="./games/terratorial.html">Territorial.io</a><br>    
 
-        <img class="game_image" src="./static/ee9ca3764ef4289a48a1ebf457ef605441ed1f35a0f2eb12707a70d609e53686.avif" alt="Game Image">  
-        <a href="./games/retrobowl.html">Retro Bowl</a>   
+        <img class="game_image" src="./static/ee9ca3764ef4289a48a1ebf457ef605441ed1f35a0f2eb12707a70d609e53686.avif" alt="Game Image"><br> 
+        <a href="./games/retrobowl.html">Retro Bowl</a><br>   
 
         <img class="game_image" src="./static/cookieclicker.jpeg" alt="Game Image"><br>
         <a href="./games/cookieclicker/index.html">Cookie clicker</a><br>
@@ -108,10 +108,10 @@
         <img class="game_image" src="./static/2048.jpeg" alt="Game Image"><br>
         <a href="./games/2048.html">2048</a><br>
 
-        <img class="game_image" src="./static/teraria.jpg" alt="Game Image">     
+        <img class="game_image" src="./static/teraria.jpg" alt="Game Image"><br>     
         <a href="./games/Terraria.html">Terraria</a><br>
 
-        <img class="game_image" src="./static/teraria.jpg" alt="Game Image">    
+        <img class="game_image" src="./static/teraria.jpg" alt="Game Image"><br>    
         <a href="./games/TerrariaMP.html">Terraria Multiplayer </a><br>
     </div>
 
