--- a/star/index.html
+++ b/star/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+     <body>
+     <div id="header"></div> <!-- Placeholder for header content -->
+    <script src="loadContent.js"></script>
+    <script src="./scripts/navigation.js"></script>
+     </body>
 <head>
  
   <meta charset="UTF-8">
@@ -61,9 +65,4 @@
   </script>
   <script src="./assets/script.js" defer></script>
 </body>
-<head>
-  <button class = 'button' onclick=Redir("./exploits.html")>Exploits</button>
-  <button class = 'button' onclick='create_blnkr()'>About:blank cloaker</button>
-  <button class = "button" onclick="Redir('./Clockwork.html')">ClockworkOS</button>
-</head>
 </html>
