--- a/star/index.html
+++ b/star/index.html
@@ -52,17 +52,8 @@
     <p class="description">Made by theskid22 on github</p>
     <input type="text" class="input" placeholder="Enter a search query or URL">
   </div>
-
-  <div class="footer">
-    <div>
-    </div>
-
-   
-  </div>
-  
-  <script>
-   
-  </script>
   <script src="./assets/script.js" defer></script>
+<div id="footer"></div> <!-- Placeholder for footer content -->
+
 </body>
 </html>
