--- a/star/index.html
+++ b/star/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-     <body>
-     <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="loadContent.js"></script>
-    <script src="./scripts/navigation.js"></script>
-     </body>
 <head>
  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./assets/ultraviolet.png" type="image/png">
   <title>Asphalt</title>
-
+</head>
+     <body>
+     <div id="header"></div> <!-- Placeholder for header content -->
+    <script src="loadContent.js"></script>
+    <script src="./scripts/navigation.js"></script>
+     </body>
+<head>
 
   <!-- Styles and fonts -->
   <link rel="stylesheet" href="./assets/style.css">
