--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
      <body>
      <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="loadContent.js"></script>
-    <script src="./scripts/navigation.js"></script>
+    <script src="../loadContent.js"></script>
+    <script src="../scripts/navigation.js"></script>
      </body>
 </body>
 <head>
