--- a/star/index.html
+++ b/star/index.html
@@ -9,8 +9,8 @@
 </head>
      <body>
      <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="loadContent.js"></script>
-    <script src="./scripts/navigation.js"></script>
+    <script src="../loadContent.js"></script>
+    <script src="../scripts/navigation.js"></script>
      </body>
 <head>
 
