--- a/star/index.html
+++ b/star/index.html
@@ -9,7 +9,27 @@
 </head>
      <body>
      <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="../loadContent.js"></script>
+    <script> // WARNING. CHANGES MADE TO THE UI WILL NOT FULLY REFLECT CHANGES MADE IN STAR BECAUSE OF THE WAY IT IS LOADED. 
+    
+    function loadHTML(url, elementId) {
+    fetch(url)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok ' + response.statusText);
+            }
+            return response.text();
+        })
+        .then(data => {
+            document.getElementById(elementId).innerHTML = data;
+        })
+        .catch(error => console.error('Error loading HTML:', error));
+      }
+
+    document.addEventListener("DOMContentLoaded", function() {
+      loadHTML('header.html', 'header');
+      loadHTML('footer.html', 'footer');
+    });
+    </script>
     <script src="../scripts/navigation.js"></script>
      </body>
 <head>
