oh dont mind me im just a wee bit braindead

--- a/star/index.html
+++ b/star/index.html
@@ -26,8 +26,8 @@
       }
 
     document.addEventListener("DOMContentLoaded", function() {
-      loadHTML('header.html', 'header');
-      loadHTML('footer.html', 'footer');
+      loadHTML('../header.html', 'header');
+      loadHTML('../footer.html', 'footer');
     });
     </script>
     <script src="../scripts/navigation.js"></script>
