--- a/star/index.html
+++ b/star/index.html
@@ -31,7 +31,9 @@
       loadHTML('../footer.html', 'footer');
     });
     </script>
-    <script src="../scripts/navigation.js"></script>
+    <script src="/scripts/navigation.js">
+
+    </script>
      </body>
 <head>
 
