--- a/star/index.html
+++ b/star/index.html
@@ -31,8 +31,28 @@
       loadHTML('../footer.html', 'footer');
     });
     </script>
-    <script src="/scripts/navigation.js">
-
+    <script>
+        function goto(area) {
+    if (area == 'games') {
+        window.location.href = "/games.html";
+    } else if (area == "star") {
+        window.location.href = '/star/index.html';
+    } else if (area == 'resources') {
+        window.location.href= '/resources.html';
+    } else if (area == 'home') {
+        window.location.href = '/index.html';
+    } else if (area == 'about') {
+        window.location.href = '/about.html';
+    } else if (area == 'news') {
+        window.location.href = '/news.html';
+    } else if (area == 'discord') {
+        window.location.href = 'https://discord.gg/yJUGGs8EAA';
+    } else if (area == 'ethandupe') {
+        window.location.href = '/ethandupe/index.html';
+    } else if (area == 'mathsolver') {
+        window.location.href = '/mathsolver/index.html';
+    }
+}
     </script>
      </body>
 <head>
