fixed CSS i think

--- a/games.html
+++ b/games.html
@@ -46,7 +46,7 @@
             border: 2px solid #FFD700;
             padding: 15px 32px;
             text-align: center;
-            color: yellow;
+            color: white;
             text-decoration: none;
             font-size: 18px;
             margin: 10px;
