--- a/header.html
+++ b/header.html
@@ -1,10 +1,44 @@
-<div class="button_container">
-    <button onclick="goto('home')" class="button_navigation">Home</button>
-    <button onclick="goto('games')" class="button_navigation">Games</button>
-    <button onclick="goto('star')" class="button_navigation">Star</button>
-    <button onclick="goto('about')" class="button_navigation">About</button>
-    <button onclick="goto('news')" class="button_navigation">News</button>
-    <button onclick="goto('discord')" class="button_navigation">Discord</button>
-    <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
-    <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navigation</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <style>
+        .button_container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .button_navigation {
+            padding: 10px 20px;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        .button_navigation .fa-gear {
+            margin-right: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="button_container">
+        <button onclick="goto('home')" class="button_navigation">Home</button>
+        <button onclick="goto('games')" class="button_navigation">Games</button>
+        <button onclick="goto('star')" class="button_navigation">Star</button>
+        <button onclick="goto('about')" class="button_navigation">About</button>
+        <button onclick="goto('news')" class="button_navigation">News</button>
+        <button onclick="goto('discord')" class="button_navigation">Discord</button>
+        <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
+        <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
+        <button onclick="goto('settings')" class="button_navigation">
+            <i class="fa fa-gear"></i> Settings
+        </button>
+    </div>
+    <script src="navigation.js"></script>
+</body>
+</html>
