--- a/settings.html
+++ b/settings.html
@@ -1,4 +1,5 @@
 <html>
+testing
 <script>
 	// Function to set a cookie
 function setCookie(name, value, daysToExpire) {
@@ -28,12 +29,12 @@ function getCookie(name) {
 }
 
 // Example usage
-var valueToSave = "example value";
-setCookie("myCookie", valueToSave, 30); // Save the value for 30 days
+var valueToSave = "black";
+setCookie("background color", valueToSave, 365); // Save the value for 300 days
 console.log("Cookie saved with value: " + valueToSave);
 
 // To retrieve the value later
-var retrievedValue = getCookie("myCookie");
+var retrievedValue = getCookie("background color");
 console.log("Retrieved value from cookie: " + retrievedValue);
 </script>
 </html>
