removed settings word and made space

--- a/header.html
+++ b/header.html
@@ -36,7 +36,7 @@
         <button onclick="goto('ethandupe')" class="button_navigation">Ethandupe</button>
         <button onclick="goto('mathsolver')" class="button_navigation">Math Solver</button>
         <button onclick="goto('settings')" class="button_navigation">
-            <i class="fa fa-gear"></i> Settings
+            <i class="fa fa-gear"></i>
         </button>
     </div>
     <script src="navigation.js"></script>
