--- a/settings.html
+++ b/settings.html
@@ -38,7 +38,7 @@ function setValue(value, cookie) {
 var retrievedValue = getCookie("theme");
 
 </script>
-<button onclick="setValue('theme', 'black')">setThemeBlack</button>
-<button onclick="setValue('theme', 'white')">setThemeWhite</button>
-<button onclick="setValue('theme', 'def')">setThemeDef</button>
+<button onclick="setValue('black', 'theme')">setThemeBlack</button>
+<button onclick="setValue('white', 'theme')">setThemeWhite</button>
+<button onclick="setValue('def', 'theme')">setThemeDef</button>
 </html>
