--- a/header.html
+++ b/header.html
@@ -59,7 +59,7 @@
         <button onclick="goto('home')" class="button_navigation">Home</button>
         
         <div class="dropdown">
-            <button class="button_navigation">Util</button>
+            <button class="button_navigation">Utilities</button>
             <div class="dropdown_content">
                 <button onclick="goto('games')" class="button_navigation">Games</button>
                 <button onclick="goto('star')" class="button_navigation">Star</button>
