--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
     </div>
 
     <div id="footer"></div> <!-- Placeholder for footer content -->
+	<script src='/settings.js'></script>
 </body>
 </html>
