--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
         .dropdown_content {
             display: none;
             position: absolute;
-            background: linear-gradient(to bottom right, #007BFF, #00FF7F);
+            background: linear-gradient(45deg, #FFD700, #000);
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
@@ -39,8 +39,8 @@
             overflow: hidden;
         }
         .dropdown_content .button_navigation {
-            color: black;
-            background-color: white;
+            color: white;
+            background-color: black;
             padding: 10px 20px;
             text-decoration: none;
             display: block;
