Finished the skelleton of things

--- a/news.html
+++ b/news.html
@@ -81,5 +81,6 @@ div#main-content {
 	RCKSTR html port finished (5/25/24)			
 </div>
     <script src="./scripts/navigation.js"></script>
+	<script src='/settings.js'></script>
 </body>
 </html>
