--- a/header.html
+++ b/header.html
@@ -44,7 +44,7 @@
             padding: 10px 20px;
             text-decoration: none;
             display: block;
-            text-align: left;
+            text-align: center;
             border: none;
             font-size: 16px;
         }
