--- a/header.html
+++ b/header.html
@@ -31,6 +31,7 @@
         .dropdown_content {
             display: none;
             position: absolute;
+            align: center;
             background: linear-gradient(45deg, #FFD700, #000);
             min-width: 50px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
