rare footage of me updating the changelog

--- a/news.html
+++ b/news.html
@@ -74,6 +74,8 @@ div#main-content {
 <div class="news_container">
 	Update log: 
 	<br>
+	Added dropdown menus + Settings (5/31/24)
+	<br>
 	Made the themes reflect the RCKSTR logo (5/29/24)
 	<br>
 	Made the banner universal and made dark mode by default. (5/26/24)
