--- a/about.html
+++ b/about.html
@@ -101,11 +101,11 @@ div#main-content {
 			<br>
 			Ethan_dupe: Creating ethandupe, and helping out with development
 			<br>
-			USLDesigns3030: Helping with Ethandupe, creating RCKSTR.
+			USLDesigns3030: Helping with Ethandupe, creating RCKSTR.(rip the wordpress version), also being an amazing designer
 			<br>
-			theskid22: Creating asphalt, Creating the html port, helping with ethandupe
+			theskid22: Creating the html port, helping with ethandupe
 			<br>
-			Titanium Network: (not affiliated with this project) Creating the ultraviolet template and the old discord exploit
+			Titanium Network: (not affiliated with this project) Creating the ultraviolet template
 			<br>
 			Aiding: (vk6) (not affilated with this project) Creating dextensify
 			<br>
