added some more colors

--- a/settings.html
+++ b/settings.html
@@ -36,4 +36,7 @@ function setValue(value, cookie) {
 </script>
 <button onclick="setValue('black', 'theme')">setThemeBlack</button>
 <button onclick="setValue('white', 'theme')">setThemeWhite</button>
+<button onclick="setValue('pink', 'theme')">setThemePink</button>
+<button onclick="setValue('blue', 'theme')">setThemeBlue</button>
+<button onclick="setValue('red', 'theme')">setThemeRed</button>
 </html>
