--- a/header.html
+++ b/header.html
@@ -44,10 +44,9 @@
     padding: 10px 20px;
     text-decoration: none;
     display: block;
+    border: none;
     font-size: 16px;
-    margin: 10px auto; /* Center align horizontally and add margin */
-    border: none; /* Resetting the border to none */
-    border-radius: 5px; /* Adding border-radius */
+    margin: 10 auto; /* Center the buttons horizontally */
 }
 
 .dropdown_content .button_navigation:hover {
