--- a/header.html
+++ b/header.html
@@ -41,7 +41,7 @@
 .dropdown_content .button_navigation {
     color: white;
     background-color: black;
-    text-align: center;
+    content-align: center;
     padding: 10px 20px;
     text-decoration: none;
     display: block;
