--- a/settings.html
+++ b/settings.html
@@ -31,6 +31,9 @@ function getCookie(name) {
 function setValue(value, cookie) {
 	setCookie(cookie, value, 365)
 }
+<div id="header"></div> <!-- Placeholder for header content -->
+<script src="loadContent.js"></script>
+<script src="./scripts/navigation.js"></script>
 
 // To retrieve the value later
 </script>
