--- a/settings.html
+++ b/settings.html
@@ -31,7 +31,7 @@ function getCookie(name) {
 function setValue(value, cookie) {
 	setCookie(cookie, value, 365)
 }
-<div id="header"></div> <!-- Placeholder for header content -->
+<div id="header"></div> 
 <script src="loadContent.js"></script>
 <script src="./scripts/navigation.js"></script>
 
